# tae-backend

./: .env  .env.example  .gitignore  CNAME  CSIOS GID.dc.html  CSIOS Gateway.dc.html  CSIOS JAI.dc.html  CSIOS NovaLife.dc.html  CSIOS Syncori.dc.html  CSIOS TAE.dc.html  CSIOS TheMySpace.dc.html  CSIOS Vault.dc.html  CSIOS Vulgate.dc.html  Dockerfile  LICENSE  README.md  SIOS App System.dc.html  SIOS_Final_Runtime_Wiring_Directive.docx  alembic.ini  app.py  architect_pages.txt  docker-compose.yml  global.css  html  index.html  package.json  pyproject.toml  render.yaml  root.tsx  routes.py  routes.ts  start.sh  tasks.json  vite.config.ts
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: config.py  main.py  security.py
app/repos/: database.py  models.py  runtime_state_repo.py
app/services/: gid.py  jai.py  memory.py  orchestrator.py  runtime.py  usage.py
dist-build/assets/: index-Y9i5Jp1f.css
dist-live/: broadcast.html  index.html  sw.js
dist-live/_assets/: index-BIBLe_kV.js  index-BOyvi0gD.js  index-C8jwvwgI.js  index-CXKxlCxL.js  index-DVd1JlJo.css  index-DfPY_evY.js  index-DgAuV9Re.css  index-KiA5fN_X.js  index-qmaMm2j6.js
plans/: SIOS_RELEASE_BUILD.json  SIOS_TAE_RUNTIME_ACTIVATION.json
prisma/: schema.prisma
public/: demo.html  manifest.json
runtime/: __init__.py  mcp_tools.py  state.py  tae_orchestrator.py  ws_manager.py
scripts/: migrate_from_prisma.py
src/: App.tsx  db.js  index.css  seed.js  server.js
src/lib/: api.ts  audio.ts  (+8 more)
tasks/: 2026-05-09_release_runtime.json
tests/: test_health.py
(+40 files in other folders)
