[project]
name = "react-app"
version = "0.1.0"
description = "React App with FastAPI Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.41.0",
    "httpx==0.28.1",
    "python-multipart==0.0.22",
    "watchfiles==1.1.1",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.49",
    "openai>=2.32.0",
    "websockets>=16.0",
    "mcp>=1.27.0",
    "docx2txt>=0.9",
    "pydantic-settings>=2.7.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
]

[tool.uv]
exclude-newer = "14 days"
# workshop-connect is published by us; exempt from the rolling window.
exclude-newer-package = { workshop-connect = "2027-01-01" }

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
